# fwupd

./: meson.build  meson_options.txt
data/: meson.build
data/bios-settings.d/: meson.build
data/pki/: meson.build
data/remotes.d/: meson.build
data/tests/: meson.build
docs/: meson.build
plugins/uefi-capsule/: meson.build
src/tests/host-emulate/: meson.build
